* SPEC-file parser improvements 
* python3.X compatibilty in single code-base

v1.0.6, 2014-04-15

* new way of accessing spec-scans when parsing the spec file
  new: spec scans can be directly accessed with there spec-scan-number
* sequential gridding: usage improvements
* sample displacement error consideration in qconversion (experimental)
* new Q2AngFit function able to fit the goniometer angles or a q-vector
* minor fixes in the CIF file parser
* add workaround for internal coordinate system definition in the experiment 
  class
* new getxrdml_scan function to read (multiple) XRDML-files 
* fixes for the getxrdml_map function
* add packaging instructions for WIN64

v1.0.5, 2014-02-09

* Documentation updates
* minor compiler warning fixes and small bug fixes (line cut routines, 
  EDF file reading)
* more flexible shape of data arrays for Ang2Q function
* minor improvements of the spec-file parser
* added KeepData option to Gridders in 1,2,3 dimensions (sequential gridding)
* implement possibility to read gzipped, bzipped data files 
  (available for most data file readers)

v1.0.4, 2013-12-22 "the final Linz edition"

* bugfix in GID experimental class: qconv argument so far not used correctly!
* enhanced fitting routines
* spec files can now be parsed while gzipped
* CBF file parser for detector images 
* compile fixes for Microsoft compilers
* compile fixes on Mac
* new predefined materials (NaCl, FeO, Fe3O4, Co3O4,...)
* some minor bug fixes

v1.0.3, 2013-10-25

* build_doc target for setup.py to help build docs (thanks to F. Picca)
* fix python setup.py --help
* add PseudoVoigt function in 1D
* add Lorentzian peak shape in addition to Gaussian in new function
  multPeakFit
* some minor bug fixes

v1.0.2, 2013-09-17

* add documentation source to tarball
* generate info file from documentation
* make c extension work with python3, and in general make XU more python3
  friendly
* fix bug in SiGe materials lattice_const_AB function

v1.0.1, 2013-09-14
